# Researchy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  research.cmd
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 83671393f124_source_docs.py  a1f4c8d27e55_task_depth.py  b3e6d90f114a_drop_agent_event.py  b9760c7c55e4_user_sources_and_draft.py  c7a2e51d883b_drop_embedding.py  c7d2a41e9b03_api_key_lifecycle.py  d5b1c9a7f2e0_clarify_questions.py  f9d931baade6_baseline_schema.py
docs/: BACKLOG.md  claude_code_prompt.md
research_assistant/: __init__.py  latex.py  reporting.py
research_assistant/agents/: __init__.py  clarify.py  graph.py  nodes.py  parsing.py  profiles.py  prompts.py  schemas.py  state.py
research_assistant/api/: __init__.py  app.py  bot.py  deps.py  ops.py  research.py  schemas.py
research_assistant/bot/: __init__.py  delivery.py  handlers.py  keyboards.py  manager.py
research_assistant/cli/: __init__.py  __main__.py  chat.py  client.py  config.py  export.py  interview.py  local.py  prompt.py  render.py  sse.py
research_assistant/core/: __init__.py  crypto.py  exceptions.py  logging.py  settings.py
research_assistant/eval/: __init__.py  __main__.py  cases.py  judge.py  runner.py
research_assistant/events/: __init__.py  publisher.py  subscriber.py
research_assistant/export/: __init__.py  latex.py  reporting.py
research_assistant/ingest/: __init__.py  drafts.py
research_assistant/llm/: __init__.py  base.py  factory.py  litellm_provider.py
research_assistant/mcp/: __init__.py  (+3 more)
scripts/: colors.bat  colors.ps1  dev.ps1
tests/: fakes.py  test_api.py  test_arxiv_meta.py  test_citations.py  test_clarify.py  test_cli.py  test_crypto.py  test_db_init.py  test_draft_prompts.py  test_drafts.py  test_e2e.py  test_eval.py  test_events.py  test_export.py  test_gap_feedback.py  test_graph.py  test_interview.py  test_latex.py  test_mcp_backend.py  test_mcp_server.py  test_node_configs.py  test_ops.py  test_parsing.py  test_profiles.py  test_prompt.py  test_reporting.py  test_routing.py  test_synthesizer_prompt.py  test_tasks_runner.py  test_tools_cache.py  test_web_scraper.py
(+26 files in other folders)
